# memory-layer

./: .dependency-cruiser.cjs  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  openapi.yaml  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.postgres.config.ts
.github/workflows/: ci.yml  release.yml
benchmarks/: compaction-benchmark.mjs  run-all.mjs  search-benchmark.mjs  semantic-benchmark.mjs
benchmarks/results/: 4.5.0.json  5.0.0.json
clients/python/: README.md  pyproject.toml
clients/python/memory_layer_client/: __init__.py  _base.py  _generated.py  cli.py  client.py  models.py  runtime.py
clients/python/tests/: test_async_client.py  test_cli.py  test_client.py  test_models.py  test_runtime.py
docs/: API_TIERS.md  DEPLOYMENT.md  INTEGRATIONS.md  MEMORY_QUALITY_BASELINE.md  MEMORY_QUALITY_RELEASE_GATE.md  MEMORY_QUALITY_RUBRIC.md  OPERATIONS.md  PHASE_5_ROADMAP.md  REMEDIATION_PLAN.md  SCOPE_MODEL.md  SECURITY.md  ULTIMATE_100_100_EXECUTION_PLAN.md  ULTIMATE_MEMORY_LAYER_ROADMAP.md  prd.json
evals/: README.md  retrieval-dataset.mjs  retrieval-metrics.mjs  retrieval-quality.mjs  retrieval-runners.mjs  retrieval-tokens.mjs  scenario-evals.mjs
evals/data/: retrieval-cases.mjs
evals/memory-quality/: associations.mjs  baseline.json  contradictions.mjs  discovery.mjs  episodic-recall.mjs  false-memory.mjs  fidelity.mjs  index.mjs  intelligence.mjs  long-horizon.mjs  playbooks.mjs  profiles.mjs  quality-modes.mjs  reflection.mjs  retention.mjs  shared.mjs  snapshots.mjs  temporal.mjs
evals/platform-quality/: index.mjs
evals/traces/: hosted-shared-memory.json  local-no-provider.json
examples/: ai-ide.ts  autonomous-agent.ts  chat-assistant.ts  claude-desktop-config.json  dark-factory.ts  hosted-service.ts  langchain.ts  mcp-server.ts  multi-agent-postgres.ts  tool-calling-agent.ts  tsconfig.json  vercel-ai.ts  zero-config.ts
examples/python-client/: agent.py
memory-layer/: README.md
memory-layer/src/: monitor.test.ts
scripts/: compare-benchmarks.mjs  export-memory.mjs  extract-changelog-release.mjs  generate-python-client.mjs  import-memory.mjs  report-memory-quality-delta.mjs
src/: db.test.ts  db.ts  index.ts  monitor.ts  types.ts
src/__tests__/: adapter-conformance.test.ts  aliases.test.ts  associations.test.ts  bundles.test.ts  capability-namespaces.test.ts  circuit-breaker.test.ts  cluster.test.ts  context.test.ts  contradictions.test.ts  core-cross-scope-leaks.test.ts  core-memory-selection.test.ts  core-memory.test.ts  corpus-refresh.test.ts  cross-scope-trust.test.ts  cross-scope.test.ts  curation.test.ts  cursor-conformance.test.ts  derived.test.ts  discover.test.ts  docker-entrypoint.test.ts  document-ingestion.test.ts  effective-config.test.ts  embedding-providers.test.ts  embedding-resilience.test.ts  embeddings.test.ts  episodic.test.ts  event-integrity-conformance.test.ts  events.test.ts  extract-rationale.test.ts  extractive-summarizer.test.ts  extractor.test.ts  formatter-trust-layout.test.ts  formatter.test.ts  governance-persistence.test.ts  graph-report.test.ts  http-security.test.ts  http-server.test.ts  inspect-cli.test.ts  integrations.test.ts  knowledge-growth.test.ts  (+59 more)
src/adapters/: sync-to-async.ts
src/cli/: inspect.ts
src/composition/: provider-managers.ts  quick.ts
src/contracts/: aliases.ts  async-storage.ts  bundles.ts  cognitive.ts  context-contract.ts  coordination.ts  core-memory.ts  curation.ts  derived.ts  discovery.ts  (+20 more)
(+97 files in other folders)
