[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "memory-layer-client"
version = "2.0.0"
description = "Python REST client for the memory-layer server"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0,<1.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
keywords = ["ai", "memory", "agent", "retrieval"]

[project.urls]
Repository = "https://github.com/your-org/memory-layer"
Documentation = "https://github.com/your-org/memory-layer/tree/main/clients/python"
Issues = "https://github.com/your-org/memory-layer/issues"

[tool.setuptools.packages.find]
include = ["memory_layer_client*"]

[tool.setuptools.package-data]
memory_layer_client = ["py.typed"]
